--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     <script src="https://kit.fontawesome.com/ce5bce1703.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="menu container">
+            <a href="#" class="logo">LevelUP Store</a>
+            <input type="checkbox" id="menu"/>
+            <label for="menu">
+                <img src="./assets/img/menu.png" class="menu-icono" alt="menu">
+            </label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="./pages/news.html">News</a></li>
+                    <li><a href="./pages/contact.html">Contact</a></li>
+                    <li><a href="./pages/login.html" target="_blank">Login</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="header-content container">
+            <div class="header-txt">
+                <h1><span>Buy</span> your <span>favorite games</span> <br>here</h1>
+                <p>
+                    <span>LevelUP Store</span> is your ultimate destination for the latest and greatest in video games. Whether you're a casual gamer or a hardcore enthusiast, we have everything you need to take your gaming experience to the next level. Our mission is to provide a one-stop shop for all your gaming needs, offering a wide range of products, competitive prices, and exceptional customer service.
+                </p>
+                <div class="buttons">
+                    <a href="./pages/info.html" class="btn-1">More Info</a>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
