--- a/index.html
+++ b/index.html
@@ -36,5 +36,20 @@
             </div>
         </div>
     </header>
+
+    <section class="top container">
+        <h2>Top Sellers</h2>
+        <div class="top-content">
+            <img src="./assets/img/g1.jpg" alt="top-1">
+            <img src="./assets/img/g2.jpg" alt="top-2">
+            <img src="./assets/img/g3.jpg" alt="top-3">
+            <img src="./assets/img/g4.jpg" alt="top-4">
+            <img src="./assets/img/g5.jpg" alt="top-5">
+            <img src="./assets/img/g6.jpg" alt="top-6">
+            <img src="./assets/img/g7.jpg" alt="top-7">
+        </div>
+    </section>
+
+    
 </body>
 </html>
