--- a/index.html
+++ b/index.html
@@ -50,6 +50,240 @@
         </div>
     </section>
 
-    
+    <main class="product container">
+        <h2>All</h2>
+        <div class="product-content">
+            <div class="product-1">
+                <img src="./assets/img/p1.jpg" alt="game-1">
+                <div class="product-txt">
+                    <h3>Dead By Deadlight</h3>
+                    <div class="price">
+                        <p>$USD 16.49</p>
+                        <a href="https://deadbydaylight.com/" target="_blank" class="btn-2">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="./assets/img/p2.jpg" alt="game-2">
+                <div class="product-txt">
+                    <h3>GTA 5 : Premium Edition</h3>
+                    <div class="price">
+                        <p>$USD 33.99</p>
+                        <a href="https://www.rockstargames.com/gta-v" target="_blank" class="btn-2">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="./assets/img/p3.jpg" alt="game-3">
+                <div class="product-txt">
+                    <h3>Elden Ring</h3>
+                    <div class="price">
+                        <p>$USD 60</p>
+                        <a href="https://en.bandainamcoent.eu/elden-ring/elden-ring/shop-now" target="_blank" class="btn-2">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="./assets/img/p4.jpg" alt="game-4">
+                <div class="product-txt">
+                    <h3>EA FC 24</h3>
+                    <div class="price">
+                        <p>$USD 60</p>
+                        <a href="https://www.ea.com/es-es/games/ea-sports-fc/fc-24" target="_blank" class="btn-2">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="./assets/img/p5.avif" alt="game-5">
+                <div class="product-txt">
+                    <h3>Ghost Of Tsushima</h3>
+                    <div class="price">
+                        <p>$USD 59.99</p>
+                        <a href="https://www.playstation.com/es-mx/games/ghost-of-tsushima/#buy-now" target="_blank" class="btn-2">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="./assets/img/p6.jpg" alt="game-6">
+                <div class="product-txt">
+                    <h3>Call Of Duty: MW3</h3>
+                    <div class="price">
+                        <p>$USD 49.99</p>
+                        <a href="https://www.callofduty.com/modernwarfare3" target="_blank" class="btn-2">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="./assets/img/p7.avif" alt="game-7">
+                <div class="product-txt">
+                    <h3>Alan Wake 2</h3>
+                    <div class="price">
+                        <p>$USD 60</p>
+                        <a href="https://www.alanwake.com/buy-now-alan-wake-2/#/search&retail_type=digital" target="_blank" class="btn-2">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="./assets/img/p8.jpg" alt="game-8">
+                <div class="product-txt">
+                    <h3>Red Dead Redemption 2</h3>
+                    <div class="price">
+                        <p>$USD 39.99</p>
+                        <a href="https://store.rockstargames.com/es-419/game/buy-red-dead-redemption-2?_gl=1*168835x*_ga*MTYxNzgwMzQ4Ny4xNzE4MDU3MzIz*_ga_PJQ2JYZDQC*MTcyMDgzNzUyOC4yLjEuMTcyMDgzODExNS4wLjAuMA.." target="_blank" class="btn-2">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="./assets/img/p9.avif" alt="game-9">
+                <div class="product-txt">
+                    <h3>Fortnite</h3>
+                    <div class="price">
+                        <p>Free</p>
+                        <a href="https://www.fortnite.com/download" target="_blank" class="btn-2">Download Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="./assets/img/p10.jpg" alt="game-10">
+                <div class="product-txt">
+                    <h3>Destiny 2</h3>
+                    <div class="price">
+                        <p>Free</p>
+                        <a href="https://www.bungie.net/7/en/Destiny/Buy" target="_blank" class="btn-2">Download Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="./assets/img/p11.jpg" alt="game-11">
+                <div class="product-txt">
+                    <h3>The Callisto Protocol</h3>
+                    <div class="price">
+                        <p>$USD 59.99</p>
+                        <a href="https://callisto.sds.com/en-us/buy" target="_blank" class="btn-2">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="./assets/img/p12.webp" alt="game-12">
+                <div class="product-txt">
+                    <h3>Rocket League</h3>
+                    <div class="price">
+                        <p>Free</p>
+                        <a href="https://www.rocketleague.com/es-es/play" target="_blank" class="btn-2">Download Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="./assets/img/p13.jpg" alt="game-10">
+                <div class="product-txt">
+                    <h3>NHL 24</h3>
+                    <div class="price">
+                        <p>$USD 69.99</p>
+                        <a href="https://www.ea.com/games/nhl/nhl-24/buy" target="_blank" class="btn-2">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section class="testimonial">
+            <div class="testimonial-heading">
+                <span>Reviews</span>
+                <h1>Gamers Say</h1>
+            </div>
+            <div class="testimonial-box-container">
+                <div class="testimonial-box">
+                    <div class="box-top">
+                        <div class="profile"> 
+                            <div class="profile-img">
+                                <img src="./assets/img/c-1.jpg" alt="profile">
+                            </div>
+                            <div class="name-user">
+                                <strong>Alex Turner</strong>
+                                <span>@GameMasterAlex</span>
+                            </div>   
+                        </div>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="client comment">
+                        <p>"I recently bought a few games from LevelUp Store, and I couldn't be happier! The selection is fantastic, the prices are unbeatable, and the shipping was super fast. Plus, the customer service team was very helpful when I had a question about my order."</p>
+                    </div>
+                </div>
+                <div class="testimonial-box">
+                    <div class="box-top">
+                        <div class="profile"> 
+                            <div class="profile-img">
+                                <img src="./assets/img/c-2.jpg" alt="profile">
+                            </div>
+                            <div class="name-user">
+                                <strong>Jules Collins</strong>
+                                <span>@PixelPioneer</span>
+                            </div>   
+                        </div>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="client comment">
+                        <p>"LevelUp Store has an incredible variety of games. I found some great indie titles that I haven't seen anywhere else. The checkout process was smooth, and my games arrived earlier than expected. Highly recommend this site to any gamer looking for quality and convenience."</p>
+                    </div>
+                </div>
+                <div class="testimonial-box">
+                    <div class="box-top">
+                        <div class="profile"> 
+                            <div class="profile-img">
+                                <img src="./assets/img/c-3.jpg" alt="profile">
+                            </div>
+                            <div class="name-user">
+                                <strong>Chris Martinez</strong>
+                                <span>@EpicGamerChris</span>
+                            </div>   
+                        </div>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="client comment">
+                        <p>"I've made several purchases from LevelUp Store, and I've always had a positive experience. The site is easy to navigate, and the detailed game descriptions help a lot. The only reason I'm giving 4 stars instead of 5 is that I wish they had more frequent sales."</p>
+                    </div>
+                </div>
+                <div class="testimonial-box">
+                    <div class="box-top">
+                        <div class="profile"> 
+                            <div class="profile-img">
+                                <img src="./assets/img/c-4.jpg" alt="profile">
+                            </div>
+                            <div class="name-user">
+                                <strong>Taylor Smith</strong>
+                                <span>@NextLevelTaylor</span>
+                            </div>   
+                        </div>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="client comment">
+                        <p>"LevelUp Store is amazing! They have all the latest games, and their prices are really competitive. I appreciate the thorough reviews and articles on the site, which help me decide what to buy. The delivery was prompt, and everything arrived in perfect condition."</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
