info page section

--- a/pages/info.html
+++ b/pages/info.html
@@ -32,5 +32,10 @@
             </div>
         </div>
     </header>
+
+    <section class="top container">
+        <h2>Categories</h2>
+        <p>At <span>LevelUP Store</span>, we continually update our catalog with the latest releases and timeless classics across all these categories. No matter what type of game you're looking for, you're sure to find it here. Start exploring today and <span>level up</span> your gaming experience with us!</p>
+    </section>
 </body>
 </html>
