--- a/pages/info.html
+++ b/pages/info.html
@@ -37,5 +37,237 @@
         <h2>Categories</h2>
         <p>At <span>LevelUP Store</span>, we continually update our catalog with the latest releases and timeless classics across all these categories. No matter what type of game you're looking for, you're sure to find it here. Start exploring today and <span>level up</span> your gaming experience with us!</p>
     </section>
+
+    <main class="product container">
+        <h2>Shooter</h2>
+        <div class="product-content">
+            <div class="product-1">
+                <img src="../assets/img/p6.jpg" alt="shooter-1">
+                <div class="product-txt">
+                    <h3>Call Of Duty: MW3</h3>
+                    <div class="price">
+                        <p>Modern Warfare III retains the realistic, modern setting of its predecessors and continues the sub-series storyline.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="../assets/img/p9.avif" alt="shooter-2">
+                <div class="product-txt">
+                    <h3>Fortnite</h3>
+                    <div class="price">
+                        <p>Fortnite is a third-person shooter survival game where up to 100 players compete to be the last one standing.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="../assets/img/p10.jpg" alt="shooter-3">
+                <div class="product-txt">
+                    <h3>Destiny 2</h3>
+                    <div class="price">
+                        <p>Destiny 2 is a first-person shooter game that also includes role-playing and massively multiplayer online (MMO) elements.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h2>Adventure</h2>
+        <div class="product-content">
+            <div class="product-1">
+                <img src="../assets/img/p3.jpg" alt="adventure-1">
+                <div class="product-txt">
+                    <h3>Elden Ring</h3>
+                    <div class="price">
+                        <p>Elden Ring is a third-person, open-world video game set in the fictional Lands Between, a realm blessed by the Greater Will, an outer god.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="../assets/img/p2.jpg" alt="adventure-2">
+                <div class="product-txt">
+                    <h3>GTA 5: Premium Edition</h3>
+                    <div class="price">
+                        <p>Grand Theft Auto V: Premium Edition includes the Grand Theft Auto V story experience, free access to Grand Theft Auto Online and all gameplay upgrades.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="../assets/img/p5.avif" alt="adventure-3">
+                <div class="product-txt">
+                    <h3>Ghost Of Tsushima</h3>
+                    <div class="price">
+                        <p>This is an action game in which players assume the role of a samurai (Jin Sakai) on a quest for vengeance against Mongol invaders in 13th century Japan.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="../assets/img/p8.jpg" alt="adventure-4">
+                <div class="product-txt">
+                    <h3>Red Dead Redemption</h3>
+                    <div class="price">
+                        <p>Red Dead Redemption 2 is a 2018 open-world video game that takes place in 1899 in a fictionalized version of the American West.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h2>Horror</h2>
+        <div class="product-content">
+            <div class="product-1">
+                <img src="../assets/img/p7.avif" alt="horror-1">
+                <div class="product-txt">
+                    <h3>Alan Wake 2</h3>
+                    <div class="price">
+                        <p>You take on the role of FBI agent Saga Anderson, who's come to Bright Falls to investigate a series of ritualistic murders, alongside her partner Alex Casey.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="../assets/img/p1.jpg" alt="horror-2">
+                <div class="product-txt">
+                    <h3>Dead By Deadlight</h3>
+                    <div class="price">
+                        <p>It is a one-versus-four game in which one player takes on the role of a Killer and the other four play as Survivors.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="../assets/img/p11.jpg" alt="horror-3">
+                <div class="product-txt">
+                    <h3>The Callisto Protocol</h3>
+                    <div class="price">
+                        <p>The Callisto Protocol tells an enigmatic story about a pilot who finds himself trapped in a prison just as a deadly outbreak occurs, which turns the inmates into zombie-like monsters.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h2>Sports</h2>
+        <div class="product-content">
+            <div class="product-1">
+                <img src="../assets/img/p4.jpg" alt="sport-1">
+                <div class="product-txt">
+                    <h3>EA FC 24</h3>
+                    <div class="price">
+                        <p>EA Sports FC 24 is an association football-themed simulation video game developed by EA Vancouver and EA Romania and published by EA Sports.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="../assets/img/p12.webp" alt="sport-2">
+                <div class="product-txt">
+                    <h3>Rocket League</h3>
+                    <div class="price">
+                        <p>Rocket League is a video game that combines soccer and driving, where players use rocket-powered cars to score goals with a giant ball in a futuristic arena.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="../assets/img/p13.jpg" alt="sport-3">
+                <div class="product-txt">
+                    <h3>NHL 24</h3>
+                    <div class="price">
+                        <p>NHL 24 is the most realistic hockey video game to date. All-new gameplay features including exhaust engine, physics-based contact and expanded cross-play and more.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section class="testimonial">
+            <div class="testimonial-heading">
+                <span>Reviews</span>
+                <h1>Gamers Also Say</h1>
+            </div>
+            <div class="testimonial-box-container">
+                <div class="testimonial-box">
+                    <div class="box-top">
+                        <div class="profile"> 
+                            <div class="profile-img">
+                                <img src="../assets/img/c-7.jpg" alt="profile">
+                            </div>
+                            <div class="name-user">
+                                <strong>Sam Williams</strong>
+                                <span>@GamerSam</span>
+                            </div>   
+                        </div>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="client comment">
+                        <p>"I love the variety of game categories at LevelUp Store! As a huge RPG fan, I've found some amazing titles. The selection is fantastic, and the detailed descriptions make it easy to find exactly what I'm looking for. This site has quickly become my favorite place to shop for games."</p>
+                    </div>
+                </div>
+                <div class="testimonial-box">
+                    <div class="box-top">
+                        <div class="profile"> 
+                            <div class="profile-img">
+                                <img src="../assets/img/c-5.jpg" alt="profile">
+                            </div>
+                            <div class="name-user">
+                                <strong>Mia Johnson</strong>
+                                <span>@MiaThePlayer</span>
+                            </div>   
+                        </div>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="client comment">
+                        <p>"The action and adventure section on LevelUp Store is incredible! I recently bought Red Dead Redemption 2 and it's phenomenal. The site is well-organized, and I love how easy it is to navigate through the different categories. Highly recommended!"</p>
+                    </div>
+                </div>
+                <div class="testimonial-box">
+                    <div class="box-top">
+                        <div class="profile"> 
+                            <div class="profile-img">
+                                <img src="../assets/img/c-6.jpg" alt="profile">
+                            </div>
+                            <div class="name-user">
+                                <strong>David Brown</strong>
+                                <span>@StrategicDave</span>
+                            </div>   
+                        </div>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="client comment">
+                        <p>"I'm really impressed with the simulation and strategy games available at LevelUp Store. I picked up The Sims 4, and is great. The only reason I'm not giving a full five stars is that I'd love to see even more indie strategy titles. Overall, though, the selection is top-notch."</p>
+                    </div>
+                </div>
+                <div class="testimonial-box">
+                    <div class="box-top">
+                        <div class="profile"> 
+                            <div class="profile-img">
+                                <img src="../assets/img/c-8.webp" alt="profile">
+                            </div>
+                            <div class="name-user">
+                                <strong>Emily Davis</strong>
+                                <span>@CasualGamerEm</span>
+                            </div>   
+                        </div>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="client comment">
+                        <p>"The puzzle and casual games section is a hidden gem! I found some amazing games here. LevelUp Store makes it so easy to find exactly what I need, and the customer reviews are super helpful too. I'm definitely coming back for more games!"</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
