info page footer

--- a/pages/info.html
+++ b/pages/info.html
@@ -269,5 +269,18 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer container">
+        <div class="link">
+            <a href="#" class="logo">LevelUP Store</a>
+        </div>
+        <div class="link">
+            <ul>
+                <li><a href="../pages/news.html">News</a></li>
+                <li><a href="../pages/contact.html">Contact</a></li>
+                <li><a href="../pages/login.html" target="_blank">Login</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
