news page section

--- a/pages/news.html
+++ b/pages/news.html
@@ -32,5 +32,10 @@
             </div>
         </div>
     </header>
+
+    <section class="top container">
+        <h2>Blogs and News</h2>
+        <p>Our Blogs and News page is your go-to source for staying up-to-date and connected with the gaming community. Whether you're looking for the latest news, expert reviews, or helpful tips, you'll find it all here at <span>LevelUP Store</span>.</p>
+    </section>
 </body>
 </html>
