--- a/pages/news.html
+++ b/pages/news.html
@@ -37,5 +37,90 @@
         <h2>Blogs and News</h2>
         <p>Our Blogs and News page is your go-to source for staying up-to-date and connected with the gaming community. Whether you're looking for the latest news, expert reviews, or helpful tips, you'll find it all here at <span>LevelUP Store</span>.</p>
     </section>
+
+    <main class="blog">
+        <div class="blog-container">
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="../assets/img/b1.webp" alt="blog-1">
+                </div>
+                <div class="blog-txt">
+                    <span>July 11, 2024 / Source: IGN</span>
+                    <a href="#" class="blog-title">Shelley Duvall, Star of The Shining and Popeye, Dies at 75</a>
+                    <p>Shelley Duvall, the actress best known for playing unique and often eccentric characters, passed away today at age 75.
+                        As The Hollywood Reporter writes, Duvall died in her sleep from complications resulting from diabetes. Her life partner, Dan Gilroy, confirmed Duvall's passing to the outlet. "My dear, sweet, wonderful life partner and friend left us," Gilroy said. "Too much suffering lately; now she's free. Fly away, beautiful Shelley."</p>
+                    <a href="https://www.ign.com/articles/shelley-duvall-star-of-the-shining-and-popeye-dies-at-75" target="_blank">Read More</a>
+                </div>
+            </div>
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="../assets/img/b2.jpg" alt="blog-2">
+                </div>
+                <div class="blog-txt">
+                    <span>July 12, 2024 / Source: IGN</span>
+                    <a href="#" class="blog-title">Switch Now Longest Running Nintendo Console Without Being Replaced</a>
+                    <p>The Nintendo Switch is now the longest running Nintendo home console ever after overtaking the Nintendo Entertainment System's record without being replaced.
+                    As reported by VGC, the Nintendo Switch has now lasted 2,688 days (seven years, four months, one week, and six days) without being replaced by a next generation console, a touch more than the NES's 2,686 days. The Super Nintendo Entertainment system then arrived to overtake it, but with Nintendo's Switch successor still a while away, the current console will seemingly hold a solid new record.</p>
+                    <a href="https://www.ign.com/articles/switch-now-longest-running-nintendo-console-without-being-replaced" target="_blank">Read More</a>
+                </div>
+            </div>
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="../assets/img/b3.jpg" alt="blog-3">
+                </div>
+                <div class="blog-txt">
+                    <span>July 12, 2024 / Source: IGN</span>
+                    <a href="#" class="blog-title">Ubisoft Apology for Using Historical Re-Enactment Group Flag</a>
+                    <p>Ubisoft's apology for using a flag from a Japanese historical re-enactment group in artwork for Assassin's Creed Shadows without permission isn't good enough, the group has said.
+                    As reported by Automaton, Sekigahara Teppo-tai, a historical re-enactment group made up of volunteers who perform to the public at festivals and other events, published a statement on X/Twitter saying it would also like its image, essentially copied one for one, removed from the printed physical art book featured in the Collector's Edition of Assassin's Creed Shadows. Ubisoft is selling this edition for $279.99.</p>
+                    <a href="https://www.ign.com/articles/ubisoft-apology-for-using-historical-re-enactment-group-flag-in-assassins-creed-shadows-not-enough-group-says" target="_blank">Read More</a>
+                </div>
+            </div>
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="../assets/img/b4.avif" alt="blog-4">
+                </div>
+                <div class="blog-txt">
+                    <span>July 12, 2024 / Source: IGN</span>
+                    <a href="#" class="blog-title">Elden Ring Mod Basically Turns It Into Bloodborne And We're Here For It</a>
+                    <p>An Elden Ring modder is basically turning the entire game into Bloodborne through the implementation of trick weapons, parrying firearms, quick steps, a permanent night, and more spookiness.
+                    As reported by GamesRadar, Nexus Mods user Noctis created the Graceborne: Bloodborne Inspired Overhaul, its name obviously blending Bloodborne with Elden Ring's "grace." The mod is "still in its infancy" but aims to "turn Elden Ring's base game into a more grim and sinister experience."</p>
+                    <a href="https://latam.ign.com/bloodborne/103800/news/este-mod-de-elden-ring-convierte-al-juego-en-bloodorne" target="_blank">Read More</a>
+                </div>
+            </div>
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="../assets/img/b5.jpg" alt="blog-5">
+                </div>
+                <div class="blog-txt">
+                    <span>July 12, 2024 / Source: IGN</span>
+                    <a href="#" class="blog-title">PlayStation Stars Seems to Be Back Online for Some After a Month-Long Hiatus</a>
+                    <p>After a bizarre month-long downtime, PlayStation Stars is seemingly back online in the United States.
+                    Around June 6, players were mysteriously unable to access the PlayStation Stars program. According to Kotaku, users who clicked the PlayStation Stars icon on the PlayStation App were met with an error message that read, “PlayStation Stars is currently experiencing issues. Our engineers are aware of the issue and working on a solution.” Sony would later release a statement on July 7, announcing PlayStation Stars would be “returning soon in phase regional rollouts.” According to a post on the r/PlayStation subreddit, PlayStation Stars appears to be back and running for some players in the United States so long as you update your PlayStation App.</p>
+                    <a href="https://www.ign.com/articles/playstation-stars-seems-to-be-back-online-for-some-after-a-month-long-hiatus" target="_blank">Read More</a>
+                </div>
+            </div>
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="../assets/img/b6.jpg" alt="blog-6">
+                </div>
+                <div class="blog-txt">
+                    <span>July 12, 2024 / Source: IGN</span>
+                    <a href="#" class="blog-title">Once Human Review in Progress: This Alien-Survival Game Is Fun.</a>
+                    <p>Once Human is surprising. It's a free-to-play open-world survival crafting game, a word salad of flavor-of-the-month genres if ever there was one, and it takes those well-worn ideas and simplifies them into relatively basic forms. And yet, here we are a few days after launch and I find that I can't put it down. It's still early, but so far it's so fun, and so weird.
+                    There's no shortage of post-apocalyptic survival games out there, whether you're talking about Fallout 76, Rust, 7 Days to Die, or the many, many other options. But Once Human makes its take on that setup feel unique and interesting by wrapping the end of the world around an alien infestation rather than your classic zombies or nuclear war scenarios. It's a fun approach that, in hindsight, seems underused in the genre, and Once Human puts it to use in some really clever ways.</p>
+                    <a href="https://www.ign.com/articles/once-human-review" target="_blank">Read More</a>
+                </div>
+            </div>
+        </div>
+        <div class="form-content">
+            <h2>Subscribe To Our Newsletter</h2>
+            <form>
+                <input class="field" type="text" name="name" placeholder="Your name">
+                <input class="field" type="email" name="email" placeholder="Your email">
+                <input class="submit" type="submit" value="subscribe">
+            </form>
+        </div>
+    </main>
 </body>
 </html>
