--- a/pages/news.html
+++ b/pages/news.html
@@ -122,5 +122,18 @@
             </form>
         </div>
     </main>
+
+    <footer class="footer container">
+        <div class="link">
+            <a href="#" class="logo">LevelUP Store</a>
+        </div>
+        <div class="link">
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../pages/contact.html">Contact</a></li>
+                <li><a href="../pages/login.html" target="_blank">Login</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
