contact page footer

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -66,5 +66,18 @@
             <button type="contact-submit">Send Message</button>
         </form>
     </main>
+
+    <footer class="footer container">
+        <div class="link">
+            <a href="#" class="logo">LevelUP Store</a>
+        </div>
+        <div class="link">
+            <ul>
+                <li><a href="../pages/news.html">News</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../pages/login.html" target="_blank">Login</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
