--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,6 +6,7 @@
     <title>LevelUP Store</title>
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/ce5bce1703.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="../assets/img/increase-level-svgrepo-com.svg" type="image/x-icon">
 </head>
 <body>
     <header class="header">
