--- a/pages/login.html
+++ b/pages/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LevelUP Store</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="shortcut icon" href="../assets/img/increase-level-svgrepo-com.svg" type="image/x-icon">
     <style>
         body{
             background: #92fe2D;
